# Image---Text

./: .env.example  .gitignore  AGENTS.md  CLEANUP_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  CONFIGURATION_FLOW.md  FINAL_SIDEBAR_UPDATE_SOLUTION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION.md  README.md  requirements.txt  start.sh  start_windows.bat  trace_parameter_flow.py
.claude/: settings.local.json
.github/workflows/: tauri-release.yml
app/: baseurl.json  main.py
app/assets/templates/: invoice_sample.yaml  pdf_testing.yaml  russian_student.yaml
app/auth/: session.py
app/core/: checkpoints.py  config_excel.py  config_loader.py  config_schema.py  cost.py  currency.py  currency_live.py  json_enforcer.py  local_models.py  model_registry.py  models_dev.py  pdf_convert.py  provider_endpoints.py  provider_openai.py  report_generator.py  storage.py  template_assets.py  templating.py  ui.py
app/integrations/: supabase_client.py
app/pages/: 0_Login.py  1_Upload_and_Process.py  2_Settings.py
app/sync/: metadata_sync.py
config/: models.xlsx
docs/: RELEASES_AND_AUTOUPDATE.md
scripts/: benchmark_settings.py  export_records.py  secretset.py  smoke_test.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
supabase/: schema.sql
supabase/functions/admin_add_user/: index.ts
supabase/functions/import_config_xlsx/: index.ts
supabase/functions/save_provider_secret/: index.ts
supabase/functions/test_model_connection/: index.ts
tests/: test_export_records.py  test_xlsx_export.py
