[package]
name = "image-to-text-desktop"
version = "0.1.0"
description = "Image→Text Desktop (Streamlit + Tauri)"
authors = ["Your Name <you@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

# Optional: smaller, more optimized release binaries
[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"

# Optional (handy if you later log or parse JSON from Rust)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
